# investment-app

./: .env  .env.example  BUFFETT_PRINCIPLES.md  IMPLEMENTATION_SUMMARY.md  QUICK_START.md  README.md  REAL_DATA_ENABLED.md  SYSTEM_VERIFICATION.md  TESTING_GUIDE.md  VALIDATION_ANALYSIS.md  app.py  config.py  demo.py  demo_mock.py  package-lock.json  package.json  requirements.txt  server.js  setup.sh  test_api_safe.py  test_complete_pipeline.py  test_fmp_optimization.py  test_unified_fetcher.py  validate_prices.py
analysis/: alerts.py  decision.py  fundamentals.py  graham.py  risk.py  scoring.py  statistics.py  validation.py
backend/: config.py  main.py  pyproject.toml
backend/models/: portfolio.py  transaction.py
backend/services/: portfolio_service.py  transaction_service.py
data/: acciones_colombia.json  cache.db  cache.py  fetcher.py  fmp_fetcher.py  fmp_fetcher_complete.py  fmp_fetcher_optimized.py  fmp_fetcher_v2.py  mock_data.py  portfolio.json  stock_cache.db  ticker_cik_mapper.py  transactions.json  unified_fetcher.py  watchlist.json
data/cache/: BCOLOMBIA.CL.json  ECOPETROL.CL.json  GEB.CL.json  GRUPOSURA.CL.json  ISA.CL.json  TERPEL.CL.json
pages/: 01_demo_mode.py  02_custom_analysis.py  03_portfolio_tracker.py  04_risk_analysis.py  05_api_monitor.py
public/: index.html
public/css/: style.css
public/js/: app.js
server/: datos-fetcher.js  graham-analyzer.js
tests/: test_backtesting.py  test_graham.py
